--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "verbose": true
   },
   "scripts": {
-    "test": "jest"
+    "test": "tsc && jest"
   },
   "repository": {
     "type": "git",
