--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "A mostly up to date list of books I've recently read in JSON format and some basic stats.",
   "main": "/printStats.js",
   "directories": {
-    "scripts": "scripts",
+    "src": "src",
     "test": "tests",
     "types": "types"
   },
@@ -14,15 +14,15 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.9",
-    "jest": "^29.2.2"
-  },
-  "jest": {
-    "verbose": true
+    "jest": "^29.2.2",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1"
   },
   "scripts": {
     "build": "tsc",
-    "test": "tsc && jest",
+    "test": "jest",
     "stats": "tsc && node ./dist/src/generateStats.js"
   },
   "repository": {
